--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/style.css"> 
 </head>
 <body>
     <div id="game">
-        <div class="quadrado" id="0"></div>
-        <div class="quadrado" id="1"></div>
-        <div class="quadrado" id="2"></div>
-        <div class="quadrado" id="3"></div>
-        <div class="quadrado" id="4"></div>
-        <div class="quadrado" id="5"></div>
-        <div class="quadrado" id="6"></div>
-        <div class="quadrado" id="7"></div>
-        <div class="quadrado" id="8"></div>
+        <div class="quadrado" id="pos1"></div>
+        <div class="quadrado" id="pos2"></div>
+        <div class="quadrado" id="pos3"></div>
+        <div class="quadrado" id="pos4"></div>
+        <div class="quadrado" id="pos5"></div>
+        <div class="quadrado" id="pos6"></div>
+        <div class="quadrado" id="pos7"></div>
+        <div class="quadrado" id="pos8"></div>
+        <div class="quadrado" id="pos9"></div>
     </div>
 
     <script src="game.js"></script>
