added backgrond checked

--- a/index.html
+++ b/index.html
@@ -9,15 +9,15 @@
 </head>
 <body>
     <div id="game">
-        <div class="quadrado" id="pos1"></div>
-        <div class="quadrado" id="pos2"></div>
-        <div class="quadrado" id="pos3"></div>
-        <div class="quadrado" id="pos4"></div>
-        <div class="quadrado" id="pos5"></div>
-        <div class="quadrado" id="pos6"></div>
-        <div class="quadrado" id="pos7"></div>
-        <div class="quadrado" id="pos8"></div>
-        <div class="quadrado" id="pos9"></div>
+        <div class="quadrado" id="0" onclick="checked(this.id)"></div>
+        <div class="quadrado" id="1" onclick="checked(this.id)"></div>
+        <div class="quadrado" id="2" onclick="checked(this.id)"></div>
+        <div class="quadrado" id="3" onclick="checked(this.id)"></div>
+        <div class="quadrado" id="4" onclick="checked(this.id)"></div>
+        <div class="quadrado" id="5" onclick="checked(this.id)"></div>
+        <div class="quadrado" id="6" onclick="checked(this.id)"></div>
+        <div class="quadrado" id="7" onclick="checked(this.id)"></div>
+        <div class="quadrado" id="8" onclick="checked(this.id)"></div>
     </div>
 
     <script src="game.js"></script>
