--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
         <div class="quadrado" id="8" onclick="checked(this.id)"></div>
     </div>
 
+    <div id="message" ><h2></h2></div>
+
     <script src="game.js"></script>
+
 </body>
 </html>
