--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tic Tac Toe</title>
     <link rel="stylesheet" href="styles/style.css"> 
-    <link rel="shortcut icon" href="https://img.icons8.com/external-flat-icons-inmotus-design/344/external-game-games-flat-icons-inmotus-design.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
 </head>
 <body>
     <!-- Title -->
